# hs-webview

./: .gitignore  CHANGELOG.md  README.md  flake.nix  hs-webview.cabal  hs-webview.nix
app/: Main.hs
src/: WebView.hs
