cabal-version:      3.6
name:               hs-webview
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.10.3
build-type:         Simple
homepage:           https://github.com/micharied/hs-webview
synopsis:           Minimal Haskell bindings for the webview library.
description:        Thin Haskell wrapper around the official C webview API.
category:           GUI
maintainer:         Micha Riedlinger <kontakt@micha-riedlinger.de>
bug-reports:        https://github.com/micharied/hs-webview/issues
author:             Micha Riedlinger
extra-source-files: README.md, LICENSE
extra-doc-files:   CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/micharied/hs-webview.git

library
  exposed-modules:      WebView
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base >=4.14 && <5
  ghc-options:          -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
  cxx-sources:          cbits/webview.cc
  include-dirs:         cbits/include
  cxx-options:          -std=c++17 -DWEBVIEW_STATIC
  if os(darwin)
    frameworks:        Cocoa, WebKit
    extra-libraries:   c++
    ld-options:        -framework Cocoa -framework WebKit
  else
    pkgconfig-depends: gtk+-3.0, webkit2gtk-4.1
    extra-libraries:   stdc++

executable demo
  main-is:             Main.hs
  hs-source-dirs:      app
  other-extensions:    OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <5,
                       hs-webview,
                       text >=1.2 && <2.1.3,
                       scotty >=0.13 && <0.22
  ghc-options:         -Wall -threaded
  if os(darwin)
    frameworks:        Cocoa, WebKit
    extra-libraries:   c++
    ld-options:        -framework Cocoa -framework WebKit
  else
    pkgconfig-depends: gtk+-3.0, webkit2gtk-4.1
    extra-libraries:   stdc++
